--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
 }
 
 .container{
-    background-image: url(../../assets/img/background01.png);
+    background-image: url(../assets/img/background01.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -54,14 +54,14 @@
     top: -5px;
 }
 
-.main-panel__login-form{
+.main-panel__logreg-form{
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
     width: 300px;
 }
 
-.login-input__container{
+.logreg-input__container{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -69,12 +69,20 @@
     padding: 14px 0px;
 }
 
-.login-input__icon{
+.email-input__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid rgba(0, 0 , 0, 0.44);
+    padding: 14px 0px;
+}
+
+.logreg-input__icon{
     width: 17px;
     height: 17px;
 }
 
-.login-input__input {
+.logreg-input__input {
     font-family: "Raleway", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -98,7 +106,7 @@
     display: block;
     border-radius: 160px;
     border: 1px solid #BA0C16;
-    padding: 15px 60px;
+    padding: 15px 30px;
     cursor: pointer;
 
     font-family: "Roboto", sans-serif;
@@ -109,6 +117,6 @@
     font-size: 15px;
 }
 
-.main-panel__btn-item_register{
+.main-panel__btn-item_darker{
     background-color: #770A10;
 }
