--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,13 @@
     margin: 0px;
     box-sizing: border-box;
 }
+a {
+    text-decoration: none;
+    color: #fff;
+}
 
 .container{
-    background-image: url(../assets/img/background01.png);
+    background-image: url(/img/background01.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
