--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,10 @@ a {
     color: #000;
 }
 
+.logo__title_white{
+    color: #FFFFFF;
+}
+
 .logo__icon{
     width: 30px;
     height: 39px;
@@ -124,3 +128,178 @@ a {
 .main-panel__btn-item_darker{
     background-color: #770A10;
 }
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 40px;
+    width: 100%;
+    left: 0;
+    box-sizing: border-box;
+    justify-content: space-between;
+    height: 65px;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background: #000000;
+    }
+
+.header_links {
+    font-family: 'Arsenal';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 31px;
+    text-decoration: none;
+    color: #FFFFFF;
+    }
+
+.profile_background {
+    width: 100%;
+    height: 250px;
+    left: 0px;
+    top: 0px;
+    background: #B8BFC3;
+
+}
+
+.profile_photo {
+    background-image: url(/img/Eateinrpxy0.jpg);
+    background-size: cover;
+    box-sizing: border-box;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 230px;
+    border: 5px solid #4C5656;
+    border-radius: 100px;
+}
+
+.profile_info{
+    width: 60%;
+    max-width: 600px;
+    min-width: 400px;
+    margin: 0px auto;
+    height: 100%;
+    padding: 100px 30px;
+}
+
+.profile_info__container{
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile_info-nickname {
+    font-family: "Roboto";
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 38px;
+    line-height: 56px;
+
+    background-color: transparent;
+    border: 0px;
+
+    outline-width: 0px;
+    color: #000000;
+}
+
+.profile_info-roboto-middle {
+    font-family: "Roboto";
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 28px;
+
+    background-color: transparent;
+    border: 0px;
+
+    outline-width: 0px;
+    color: #6C6C6C;
+}
+
+.profile_info-status {
+    font-family: "Roboto";
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 21px;
+
+    text-align: center;
+    padding: 20px 20%;
+    background-color: transparent;
+    border: 0px;
+
+    outline-width: 0px;
+    color: #6C6C6C;
+}
+
+.profile_info_row__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 60px 0px;
+    width: 100%;
+    left: 0;
+    box-sizing: border-box;
+    justify-content: space-between;
+    height: 65px;
+    }
+
+.profile_info-data-numbers {
+    font-family: "Roboto";
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 48px;
+    line-height: 56px;
+
+    background-color: transparent;
+    border: 0px;
+
+    outline-width: 0px;
+    color: #000000;
+}
+
+.profile__btn-item{
+    display: block;
+    border-radius: 10px;
+    border: 1px solid #000000;
+    padding: 10px 30px;
+    cursor: pointer;
+
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    color: #fff;
+    background-color: #000000;
+    font-style: normal;
+    font-size: 15px;
+}
+
+.profile__btn-item-white{
+
+    border: 2px solid #000;
+    color: #000;
+    background-color: #fff;
+
+}
+
+.profile_info_btn__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20% 15%;
+    width: 100%;
+    left: 0;
+    box-sizing: border-box;
+    justify-content: space-between;
+    height: 65px;
+    }
