--- a/styles/style.css
+++ b/styles/style.css
@@ -184,7 +184,7 @@ a {
     min-width: 400px;
     margin: 0px auto;
     height: 100%;
-    padding: 100px 30px;
+    padding: 100px 30px 0px;
 }
 
 .profile_info__container{
@@ -195,7 +195,7 @@ a {
     justify-content: center;
 }
 
-.profile_info-nickname {
+.profile_info-robo-big {
     font-family: "Roboto";
     font-optical-sizing: auto;
     font-weight: 700;
@@ -303,3 +303,25 @@ a {
     justify-content: space-between;
     height: 65px;
     }
+
+.profile_post {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.profile_posts {
+    width: 60%;
+    max-width: 600px;
+    min-width: 400px;
+    margin: 0px auto;
+    height: 100%;
+    padding: 0px 30px;
+}
+
+.profile_posts__container{
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
