--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0px;
     box-sizing: border-box;
 }
@@ -7,7 +7,7 @@ a {
     color: #fff;
 }
 
-.container{
+.container {
     background-image: url(/assets/img/background01.png);
     background-size: cover;
     background-position: center;
@@ -16,7 +16,7 @@ a {
     height: 100vh;
 }
 
-.main-panel{
+.main-panel {
     width: 40%;
     max-width: 600px;
     min-width: 400px;
@@ -27,7 +27,7 @@ a {
     padding: 10% 0px;
 }
 
-.main-panel__container{
+.main-panel__container {
     margin: 0px auto;
     display: flex;
     flex-direction: column;
@@ -37,11 +37,11 @@ a {
     width: 300px;
 }
 
-.main-panel__logo-container{
+.main-panel__logo-container {
     position: relative;
 }
 
-.logo__title{
+.logo__title {
     font-family: "Arsenal", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -50,11 +50,11 @@ a {
     color: #000;
 }
 
-.logo__title_white{
-    color: #FFFFFF;
+.logo__title_white {
+    color: #ffffff;
 }
 
-.logo__icon{
+.logo__icon {
     width: 30px;
     height: 39px;
     position: absolute;
@@ -62,30 +62,30 @@ a {
     top: -5px;
 }
 
-.main-panel__logreg-form{
+.main-panel__logreg-form {
     display: flex;
     flex-direction: column;
     gap: 30px;
     width: 300px;
 }
 
-.logreg-input__container{
+.logreg-input__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgba(0, 0 , 0, 0.44);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.44);
     padding: 14px 0px;
 }
 
-.email-input__container{
+.email-input__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid rgba(0, 0 , 0, 0.44);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.44);
     padding: 14px 0px;
 }
 
-.logreg-input__icon{
+.logreg-input__icon {
     width: 17px;
     height: 17px;
 }
@@ -103,36 +103,36 @@ a {
     outline-width: 0px;
 }
 
-.main-panel__btns{
+.main-panel__btns {
     display: flex;
     flex-direction: column;
     gap: 20px;
     width: 100%;
 }
 
-.main-panel__btn-item{
+.main-panel__btn-item {
     display: block;
     border-radius: 160px;
-    border: 1px solid #BA0C16;
+    border: 1px solid #ba0c16;
     padding: 15px 30px;
     cursor: pointer;
 
     font-family: "Roboto", sans-serif;
     font-weight: 600;
     color: #fff;
-    background-color: #BA0C16;
+    background-color: #ba0c16;
     font-style: normal;
     font-size: 15px;
     width: 100%;
 }
 
-.main-panel__btn-item:hover{
+.main-panel__btn-item:hover {
     border: 1px solid #ac4f54;
     background-color: #ac4f54;
 }
 
-.main-panel__btn-item_darker{
-    background-color: #770A10;
+.main-panel__btn-item_darker {
+    background-color: #770a10;
 }
 
 .header {
@@ -149,25 +149,24 @@ a {
     top: 0;
     z-index: 999;
     background: #000000;
-    }
+}
 
 .header_links {
-    font-family: 'Arsenal';
+    font-family: "Arsenal";
     font-style: normal;
     font-weight: 400;
     font-size: 25px;
     line-height: 31px;
     text-decoration: none;
-    color: #FFFFFF;
-    }
+    color: #ffffff;
+}
 
 .profile_background {
     width: 100%;
     height: 250px;
     left: 0px;
     top: 0px;
-    background: #B8BFC3;
-
+    background: #b8bfc3;
 }
 
 .profile_photo {
@@ -180,11 +179,11 @@ a {
     left: 50%;
     transform: translateX(-50%);
     top: 230px;
-    border: 5px solid #4C5656;
+    border: 5px solid #4c5656;
     border-radius: 100px;
 }
 
-.profile_info{
+.profile_info {
     width: 60%;
     max-width: 600px;
     min-width: 400px;
@@ -193,7 +192,7 @@ a {
     padding: 100px 30px 0px;
 }
 
-.profile_info__container{
+.profile_info__container {
     margin: 0px auto;
     display: flex;
     flex-direction: column;
@@ -228,7 +227,7 @@ a {
     border: 0px;
 
     outline-width: 0px;
-    color: #6C6C6C;
+    color: #6c6c6c;
 }
 
 .profile_info-status {
@@ -245,7 +244,7 @@ a {
     border: 0px;
 
     outline-width: 0px;
-    color: #6C6C6C;
+    color: #6c6c6c;
 }
 
 .profile_info_row__container {
@@ -258,7 +257,7 @@ a {
     box-sizing: border-box;
     justify-content: space-between;
     height: 65px;
-    }
+}
 
 .profile_info-data-numbers {
     font-family: "Roboto";
@@ -275,7 +274,7 @@ a {
     color: #000000;
 }
 
-.profile__btn-item{
+.profile__btn-item {
     display: block;
     border-radius: 10px;
     border: 1px solid #000000;
@@ -290,12 +289,10 @@ a {
     font-size: 15px;
 }
 
-.profile__btn-item-white{
-
+.profile__btn-item-white {
     border: 2px solid #000;
     color: #000;
     background-color: #fff;
-
 }
 
 .profile_info_btn__container {
@@ -308,7 +305,7 @@ a {
     box-sizing: border-box;
     justify-content: space-between;
     height: 65px;
-    }
+}
 
 .profile_post {
     max-width: 100%;
@@ -324,7 +321,7 @@ a {
     padding: 0px 30px;
 }
 
-.profile_posts__container{
+.profile_posts__container {
     margin: 30px auto;
     display: flex;
     flex-direction: column;
@@ -332,6 +329,6 @@ a {
     justify-content: center;
 }
 
-.link{
+.link {
     cursor: pointer;
 }
